[package]
name = "waveform"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
iced = { version = "0.13.1", features = ["advanced", "canvas", "tokio"] }
rodio = "0.21.1"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
